--- a/style.css
+++ b/style.css
@@ -244,14 +244,17 @@
   transform: scale(0.97);
 }
 .wikipedia-icon {
-  width: 16px;
-  height: 16px;
-  vertical-align: middle;
   margin-left: 4px;
-  opacity: 0.7;
-  transition: opacity 0.2s;
+  vertical-align: middle;
+  display: inline-block;
 }
-.wikipedia-link:hover .wikipedia-icon {
+.wikipedia-icon img {
+  height: 1em;
+  width: auto;
+  opacity: 0.75;
+  transition: opacity 0.2s ease;
+}
+.wikipedia-icon:hover img {
   opacity: 1;
 }
 
