--- a/style.css
+++ b/style.css
@@ -250,7 +250,10 @@
 }
 .wikipedia-icon img {
   height: 1em;
-  width: auto;
+  width: 1em;
+  vertical-align: middle;
+  display: inline-flex;
+  align-items: center;
   opacity: 0.75;
   transition: opacity 0.2s ease;
 }
