--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@
 }
 .clickable-tag {
   display: inline-block;
+  vertical-align: middle;
   color: #007aff;
   background-color: #f0f0f0;
   padding: 2px 8px;
