--- a/style.css
+++ b/style.css
@@ -219,6 +219,9 @@
   font-size: 12px;
   cursor: pointer;
 }
+.clickable-tag hover{
+  color: #0057a3;
+}
 .toggle-tags-button {
   display: inline-flex;
   align-items: center;
