--- a/style.css
+++ b/style.css
@@ -316,8 +316,8 @@ body {
   background-color: white;
 }
 .article:hover {
+  background-color: #fafafa;
   border-color: #ddd;
-  filter: brightness(0.95);
   box-shadow: 0 6px 12px rgba(0,0,0,0.06);
 }
 
