--- a/style.css
+++ b/style.css
@@ -291,9 +291,16 @@ body {
 }
 .body {
   font-size: 16px;
-  line-height: 1.7;
   font-family: 'Times New Roman', serif;
+  line-height: 1.7;
+  margin-top: 0.5em;
+  white-space: normal;
   color: #444;
+}
+.body br {
+  margin-bottom: 0.6em;
+  display: block;
+  content: "";
 }
 .genre {
   background-color: #e1b12c;  /* マスタード */
