--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ body {
   color: #222;
   margin-bottom: 0.5em;
 }
-.body {
+.article-body {
   font-size: 16px;
   font-family: 'Times New Roman', serif;
   line-height: 1.8;
@@ -301,12 +301,12 @@ body {
   white-space: normal;
   color: #444;
 }
-.body br {
+.article-body br {
   margin-bottom: 1.5em;
   display: block;
   content: "";
 }
-.body p {
+.article-body p {
   text-indent: 1em;
   margin-bottom: 1.2em;
 }
