--- a/style.css
+++ b/style.css
@@ -293,6 +293,12 @@ body {
   color: #222;
   margin-bottom: 0.5em;
 }
+.date {
+  font-size: 0.85rem;
+  color: #666;
+  margin-bottom: 0.5rem;
+  font-family: 'Georgia', serif;
+}
 .article-body {
   font-size: 16px;
   font-family: 'Times New Roman', serif;
