--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ body {
   font-size: 0.85rem;
   color: #666;
   margin-bottom: 0.5rem;
+  text-align: right;
   font-family: 'Georgia', serif;
 }
 .article-body {
