--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ body {
   font-family: 'Times New Roman', serif;
   line-height: 1.8;
   margin-top: 0.5em;
+  margin-bottom: 1rem;
   white-space: normal;
   color: #444;
 }
