--- a/style.css
+++ b/style.css
@@ -229,12 +229,13 @@
   padding: 4px 10px;
   background-color: #0057a3; /* 濃いブルー */
   color: white;
-  font-weight: normal; /* 少し軽めに */
+  font-weight: normal;
   font-size: 13px;
-  border: none;
-  border-radius: 24px;
+  border: 1px solid #ccc;
+  border-radius: 16px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
+  transition: all 0.15s ease;
+/*  transition: background-color 0.2s ease;*/
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 .toggle-tags-button:hover {
