--- a/style.css
+++ b/style.css
@@ -200,6 +200,12 @@
 .button:hover {
   background-color: #41b3a3;
 }
+#tag-actions {
+  margin: 8px 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
 .tag-button {
   margin: 4px;
   padding: 4px 10px;
@@ -221,7 +227,7 @@
   color: #fff;
   font-weight: 500;
 }
-.toggle-tags-button {
+.toggle-tags {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -235,13 +241,12 @@
   border-radius: 16px;
   cursor: pointer;
   transition: all 0.15s ease;
-/*  transition: background-color 0.2s ease;*/
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
-.toggle-tags-button:hover {
+.toggle-tags:hover {
   background-color: #003f7d; /* ホバーで濃く */
 }
-.toggle-tags-button:active {
+.toggle-tags:active {
   transform: scale(0.98); /* 押したとき少し縮む */
 }
 
