--- a/style.css
+++ b/style.css
@@ -378,7 +378,9 @@ body {
 .thumbnail {
   display: block;
   width: 100%;
-  aspect-ratio: 4 / 3;
+
+  padding-top: 75%;
+  /*aspect-ratio: 4 / 3;*/
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
