--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 #toggle-tags:hover {
-  background-color: #003f7d; /* ホバーで濃く */
+  background-color: #003f7d;
 }
 #clear-tags {
   margin: 4px;
@@ -373,14 +373,12 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   gap: 12px;
-  margin: 30px 0;
+/*  margin: 30px 0;*/
 }
 .thumbnail {
   display: block;
   width: 100%;
-
-  padding-top: 75%;
-  /*aspect-ratio: 4 / 3;*/
+  aspect-ratio: 4 / 3;
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
