--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   gap: 12px;
-/*  margin: 30px 0;*/
+  margin: 30px 0;
 }
 .thumbnail {
   width: 100%;
