--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   gap: 12px;
   margin: 30px 0;
+  align-self: flex-start; /* または stretch */
 }
 img.thumbnail {
   width: 100%;
@@ -395,6 +396,9 @@ img.thumbnail:hover {
   }
   #news {
     flex: 3;
+  }
+  #thumbnailGallery {
+    flex: 2;
   }
 }
 
