--- a/style.css
+++ b/style.css
@@ -3,6 +3,21 @@
   flex-direction: column;
   gap: 20px;
 }
+
+#leftColumn {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+#rightColumn {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 #tab-buttons {
   display: none;
   margin-bottom: 10px;
