--- a/style.css
+++ b/style.css
@@ -441,7 +441,10 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(80px, 1fr)); /* スマホ対応 */
   gap: 8px;
   margin: 16px 0; /* 余白を減らす */
+  max-height: 100%;
+  overflow-y: auto;
 }
+
 
 img.thumbnail {
   width: 100%;
@@ -468,6 +471,15 @@ img.thumbnail:hover {
   }
   #thumbnailGallery {
     flex: 2;
+  }
+  #mainContent.active-articles #news {
+    display: block;
+  }
+  #mainContent.active-tags #tag-filter {
+    display: block;
+  }
+  #mainContent.active-thumbnails #thumbnailGallery {
+    display: block;
   }
 }
 
